test/trivial/deitz/test_bad_if.good
test_bad_if.chpl:3: error: illegal type 'real' used in if or while condition
